[tool.poetry]
name = "aptlyctl"
version = "0.1.0"
description = "cli for aptly apt repo"
authors = ["Tomer Schwartz tomerschwartz@gmail.com"]


[tool.poetry.dependencies]
python = "^3.6"
typer =  {extras = ["all"], version = "^0.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
drive = "smart_car.main:drive"

